# watchtower

./: .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  TODO.md  azure.yaml  deployGroupList.json  prerun_cmds.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
data/: sample_device_process_events.csv
docs/: Goals.md  Prompts.md  Roadmap.md  TODO.md  Tech-stack.md  ai_search.md  architecture.md  goals.md  infrastructure.md  phase1-implementation-guide.md  simulations.md  tecch-stack.md
infra/: main.bicep  main.parameters.json
infra/modules/: ai-connections-aoai-apikey.bicep  ai-foundry-project.bicep  ai-foundry.bicep  aoai-model-chatgpt4o-mini.bicep  bing-grounding.bicep  key-vault.bicep  observability.bicep  secrets-config.bicep  storage-account.bicep
prompts/: HuntSheet.md  build_agent_ais.md  harpoon.md  multiagent_proc_recon.md
scripts/: activate_venv_if_present.sh  agent_review_process_csv.py  ask_agent.py  ask_agent_procs.py  cleanup_agents.py  create_agent.py  create_logging_agent.py  create_multiagent.py  list_bing_conn_id.py  otel_bootstrap.py  poe-completion.bash  sanitize_process_data.py  set_default_models.ps1  set_default_models.sh  set_envs.py  setup-poe-completion.bash  sync_env_from_outputs.py  write_env.ps1  write_env.sh
simulations/: README.md  command_execution_simulation.py  credential_dump_simulation.py  file_discovery_simulation.py  registry_query_simulation.py  run_mitre_simulation.py  watchtower_integration.py
src/: gunicorn.conf.py  search_index_manager.py
src/ai/: agent_builder.py  agent_manager.py  cleanup_agents.py  helpers.py  search_index_manager.py  test_agent_builder.py
src/ai/agents/: agents_cleanup.py  ai_state.json  cleanup_agents.py  create_agent_contoso_ais.py  create_agent_contoso_fs.py  create_agent_simple.py  create_agent_smoke.py
src/ai/airedteaming/: ai_redteaming.py
src/ai/archive/: __init__.py  agent_builder.py  agent_manager.py  search_index_manager.py
src/ai/chat/: ai_chat_tui.py
src/ai/evals/: evaluate.py
src/ai/harpoon/: README.md  harpoon_a0_a3.py
src/api/: main.py  search_index_manager.py
src/data/harpoon/: approved_domains.md  candidates.json  newly_registered_domains.md
src/data/processes_recon/: processes_sanitized.csv
src/watchtower/: __init__.py
tests/: conftest.py  test_agent_smoke.py  test_file_agent.py  test_loggeragent_smoke.py  test_multiagent_smoke.py  test_search_index_manager.bak  test_smoke.py  test_smoke_agent.py
